# chakradb

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json.tmp.1981120.3f52f5401fdd
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/chakradb/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_dbapi.py
docs/: README.md  arrow-schema-migration.md  clickbench-findings.md  dynamic-schema-design.md  gate2-results.md  graph-exploration.md  m0-findings.md  m1-findings.md  m2-findings.md  m3-datafusion-spike.md  requirements.md  roadmap.md  sql-reference.md
docs/archive/: requirements-v1.0.md
docs/book/: book.toml
docs/book/latex/: mermaid.lua  metadata.yaml  preamble.tex  titlepage.tex
docs/book/src/: SUMMARY.md  title.md
docs/book/src/algorithms/: bloom.md  decimal.md  gc-watermark.md  intro.md  key-index.md  merge.md  pruning.md  recovery.md  routing.md  temporal.md  visibility.md  wal.md
docs/book/src/appendix/: bibliography.md  decisions.md  glossary.md
docs/book/src/architecture/: arrow.md  checkpointing.md  compaction.md  durability.md  io.md  mvcc.md  overview.md  pk-index.md  query-router.md  storage-engine.md  transactions.md
docs/book/src/case-studies/: aml.md  ccr.md  fraud.md  ledger.md  reco.md  recommendations.md  streaming.md
docs/book/src/comparisons/: comparisons.md  duckdb.md  methodology.md  neo4j.md  postgres.md  sqlite.md
docs/book/src/engine/: data-types.md  durability.md  mvcc.md  overview.md  query-router.md  storage.md
docs/book/src/getting-started/: first-rust.md  getting-started.md  graph.md  install.md  python.md
docs/book/src/graph/: adjacency.md  algorithms.md  csr.md  live-analytics.md  model.md  modeling.md  overview.md  snapshot.md
docs/book/src/guide/: backup.md  constraints.md  copy.md  graph-app.md  observability.md  python-driver.md  sql-reference.md  types.md
docs/book/src/introduction/: cost-model.md  design-principles.md  introduction.md  the-problem.md
docs/book/src/operations/: durability.md  limits.md  monitoring.md
docs/book/src/preface/: about.md
docs/book/src/reactive/: change-streams.md
docs/book/src/reference/: configuration.md  errors.md  formats.md  python-api.md  rust-api.md
examples/: README.md  aml_app.py  aml_gen.rs  aml_pipeline.rs  aml_realtime.rs  aml_stream.py  aml_worker.rs  ccr_pipeline.rs  ccr_stream.py  reco_pipeline.rs  reco_stream.py
scripts/: README-book.md  build-book.sh  clickbench_duckdb.sh  gate2_duckdb.sh  qa.sh
src/: backpressure.rs  batch.rs  bloom.rs  cdc.rs  clock.rs  codec.rs  compaction.rs  csn.rs  database.rs  datafusion_bridge.rs  delete_vector.rs  durability.rs  error.rs  graph.rs  io.rs  l0.rs  lib.rs  manifest.rs  metrics.rs  pager.rs  part.rs  persist.rs  posix.rs  rng.rs  schema.rs  storage.rs  storage_config.rs  table.rs  value.rs  wal.rs
src/sql/: backend.rs  df.rs  exec.rs  expr.rs  mod.rs  plan.rs  txn.rs  value.rs
tests/: backup_restore.rs  cdc.rs  concurrency.rs  constraints.rs  copy.rs  crash_consistency.rs  ddl_drop_truncate.rs  decimal.rs  determinism.rs  df_sql.rs  durable_sql.rs  durable_sql_crash.rs  dynamic_schema.rs  gc_watermark.rs  graph.rs  hostile_keys.rs  io_faults.rs  lazy_open.rs  multi_table.rs  mvcc.rs  observability.rs  part_behavior.rs  part_pruning.rs  soak.rs  sql_planning.rs  sql_property.rs  sqllogic.rs  storage_recovery.rs  table_ops.rs  temporal.rs  transactions.rs  wal_ops.rs
