[package]
name = "chakradb"
version = "0.0.0-m0"
edition = "2021"
rust-version = "1.85"
description = "ChakraDB M0 prototype — risk-reduction spike for embedded transactional HTAP"
license = "Apache-2.0"
publish = false

# M0 is a deliberately throwaway prototype (see docs/roadmap.md).
# Zero dependencies is a design choice, not an accident:
#   * determinism is fully under our control (no hidden RNG, no ambient clock)
#   * builds are instant, so the test loop stays tight
#   * the trait Io / Clock / Rng seams are real rather than inherited
# M1+ will introduce arrow-rs, roaring, and a real WAL.
[dependencies]
sqlparser = "0.62"
# Arrow is now the CORE storage representation (see docs/dynamic-schema-design.md
# and the M3 spike). Sealed parts hold Arrow arrays: columnar throughout,
# zero-copy to DataFusion, and parts can persist as the open Arrow IPC format.
# This ends the zero-dependency purity of M0/M1 — a deliberate trade for
# arbitrary schema + a vectorised execution path. Pinned to 58 to match the
# version DataFusion 54 resolves, so the bridge shares one arrow crate.
arrow = { version = "58", features = ["ipc"] }
# DataFusion is the *bought* execution engine (requirements.md §8), opt-in behind
# `--features datafusion`. M3 evaluates whether the concurrency wedge survives it.
datafusion = { version = "54", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
datafusion = ["dep:datafusion", "dep:tokio"]

[lib]
name = "chakradb"
path = "src/lib.rs"

[[bin]]
name = "m0-bench"
path = "src/bin/m0_bench.rs"

[profile.release]
opt-level = 3
debug = true          # keep symbols; we profile release builds
lto = "thin"
codegen-units = 4

[profile.bench]
inherits = "release"

[[bin]]
name = "m1-bench"
path = "src/bin/m1_bench.rs"

[[bin]]
name = "m2-bench"
path = "src/bin/m2_bench.rs"

[[bin]]
name = "gate2-bench"
path = "src/bin/gate2_bench.rs"

# The DataFusion spike (M3): same dataset and queries as gate2-bench, but
# executed by DataFusion over an MVCC snapshot of ChakraDB. Only built with the
# `datafusion` feature so the default build stays lean.
[[bin]]
name = "df-bench"
path = "src/bin/df_bench.rs"
required-features = ["datafusion"]

