[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "chakradb"
version = "0.1.0"
description = "ChakraDB — an embedded HTAP database, with a DB-API 2.0 driver"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Repository = "https://github.com/ajsinha/chakradb"

[tool.maturin]
module-name = "chakradb._core"
python-source = "python"
features = ["pyo3/extension-module"]
